# sqlx

./: Cargo.toml  rust-toolchain.toml
examples/mysql/todos/: Cargo.toml
examples/postgres/axum-social-with-tests/: Cargo.toml
examples/postgres/axum-social-with-tests/src/: password.rs
examples/postgres/axum-social-with-tests/src/http/: error.rs  user.rs
examples/postgres/axum-social-with-tests/tests/: comment.rs  common.rs  post.rs  user.rs
examples/postgres/chat/: Cargo.toml
examples/postgres/chat/src/: main.rs
examples/postgres/files/: Cargo.toml
examples/postgres/files/src/: main.rs
examples/postgres/json/: Cargo.toml
examples/postgres/listen/: Cargo.toml
examples/postgres/mockable-todos/: Cargo.toml
examples/postgres/multi-database/: Cargo.toml
examples/postgres/multi-database/accounts/: Cargo.toml
examples/postgres/multi-database/accounts/src/: lib.rs
examples/postgres/multi-database/payments/: Cargo.toml
examples/postgres/multi-tenant/: Cargo.toml
examples/postgres/multi-tenant/accounts/: Cargo.toml
examples/postgres/multi-tenant/accounts/src/: lib.rs
examples/postgres/multi-tenant/payments/: Cargo.toml
examples/postgres/preferred-crates/: Cargo.toml
examples/postgres/preferred-crates/uses-rust-decimal/: Cargo.toml
examples/postgres/preferred-crates/uses-time/: Cargo.toml
examples/postgres/todos/: Cargo.toml
examples/postgres/transaction/: Cargo.toml
examples/sqlite/extension/: Cargo.toml
examples/sqlite/todos/: Cargo.toml
sqlx-core/: Cargo.toml
sqlx-core/src/types/: json.rs
sqlx-mysql/: Cargo.toml
sqlx-postgres/: Cargo.toml
sqlx-sqlite/: Cargo.toml
sqlx-sqlite/src/statement/: handle.rs
sqlx-test/: Cargo.toml
