[package]
name = "sqlx-example-postgres-json"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
workspace = "../../../"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { workspace = true, features = [ "runtime-tokio", "postgres", "json" ] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "macros"]}
