[package]
name = "sqlx-example-postgres-listen"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
workspace = "../../../"

[dependencies]
sqlx = { workspace = true, features = [ "runtime-tokio", "postgres" ] }
futures-util = { version = "0.3.31", default-features = false }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"]}
