[package]
name = "sqlx-example-postgres-transaction"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
workspace = "../../../"

[dependencies]
sqlx = { workspace = true, features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"]}
