[package]
name = "sqlx-example-sqlite-todos"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
workspace = "../../../"

[dependencies]
anyhow = "1.0"
sqlx = { workspace = true, features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "macros"]}
